# flask-minimal-microblogging

./: .gitignore  README.md  helpers.py  main.py  pyproject.toml  requirements.txt  schema.sql  start.sh
templates/: index.html  layout.html  login.html  new_post.html  register.html
templates/partial/: edit_post.html  load_more.html  updated_post.html
