[tool.poetry]
name = "cpc-web-task"
version = "0.1.0"
description = "Example full stack flask web app Project"
authors = ["Saksham"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
